Fix popover title on dark mode

--- a/_includes/scss/tables.scss
+++ b/_includes/scss/tables.scss
@@ -57,3 +57,7 @@ thead {
   color: #db2828;
   font-size: 21px;
 }
+
+.popover-header {
+  color: #212529;
+}
